--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -369,8 +369,8 @@ menuitem "Mitaman     Maps,Ressources" ""
 menuitem "Rick         Bots, Win32-Compiling" ""
 menuitem ""
 menuitem "Thanks to:" ""
-menuitem "Wouter van Oortmersson, DCP (Music)," ""
+menuitem "Wouter van Oortmersson (Engine), DCP (Music)," ""
 menuitem "JCDPC (Laptop Model, Company), dtd (Hosting), Boeck" ""
 menuitem "Ted Southard (DigitalFlux), Noctua Graphics, Arcitool,"
 menuitem "Craig Fortune, 3dcafe, Rohrschach, lemong.fr,"
-menuitem "Mayang.com, Chris Zastrow (textures)"
+menuitem "Mayang.com, Chris Zastrow, imageafter.com (textures)"
