--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -52,21 +52,21 @@ menuitem "RVSF Skins"             "showmenu rvsf"
 newmenu "cla"
 
 menumdl playermodels/terrorist/01/menu 0 1 50 5
-menuitem "Comandante"			"echo Comandante" "chmenumdl cla playermodels/terrorist/01/menu 0 1 50 5"
-menuitem "Psycho"               "echo Psycho" "chmenumdl cla playermodels/terrorist/02/menu 0 1 50 5"
-menuitem "Bomber"               "echo Bomber" "chmenumdl cla playermodels/terrorist/03/menu 0 1 50 5"
-menuitem "Ripper"               "echo Ripper" "chmenumdl cla playermodels/terrorist/04/menu 0 1 50 5"
+menuitem "Comandante"		"skin 0" "chmenumdl cla playermodels/terrorist/01/menu 0 1 50 5"
+menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02/menu 0 1 50 5"
+menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03/menu 0 1 50 5"
+menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04/menu 0 1 50 5"
 
 
 newmenu "rvsf"
 
 menumdl playermodels/counterterrorist/01/menu 0 1 50 5
-menuitem "Alpha"			"echo Alpha" "chmenumdl rvsf playermodels/counterterrorist/01/menu 0 1 50 5"
-menuitem "Tango"            "echo Tango" "chmenumdl rvsf playermodels/counterterrorist/02/menu 0 1 50 5"
-menuitem "Cobra"            "echo Cobra" "chmenumdl rvsf playermodels/counterterrorist/03/menu 0 1 50 5"
-menuitem "Viper"            "echo Viper" "chmenumdl rvsf playermodels/counterterrorist/04/menu 0 1 50 5"
-menuitem "Swat"             "echo Swat" "chmenumdl rvsf playermodels/counterterrorist/05/menu 0 1 50 5"
-menuitem "Police"           "echo Police" "chmenumdl rvsf playermodels/counterterrorist/06/menu 0 1 50 5"
+menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01/menu 0 1 50 5"
+menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02/menu 0 1 50 5"
+menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03/menu 0 1 50 5"
+menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04/menu 0 1 50 5"
+menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05/menu 0 1 50 5"
+menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06/menu 0 1 50 5"
 
 
 
