menu team commands corrected
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@294 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -73,8 +73,8 @@ menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrori
 newmenu team
 
 menumdl playermodels/terrorist/01/menu 0 1 50 5
-menuitem "Cuban Liberations Army"			"team 0" "chmenumdl team playermodels/terrorist/01/menu 0 1 50 5"
-menuitem "Rabid Viper Special Forces"		"team 1" "chmenumdl team playermodels/counterterrorist/03/menu 0 1 50 5"
+menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01/menu 0 1 50 5"
+menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03/menu 0 1 50 5"
 
 newmenu multiplayer
 
