--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -2,7 +2,7 @@
 // and all your keybindings that are different from the default (see keymap.cfg)
 
 name "unarmed"     // change!
-team "AC"
+team "cuber"
 
 invmouse 0         // 1 for flightsim mode
 sensitivity 25
@@ -69,14 +69,18 @@ alias universaldelta [
 bind MOUSE4 [ universaldelta  1 ]
 bind MOUSE5 [ universaldelta -1 ]
 
-//bind 1 "weapon 1"
-//bind 2 "weapon 2"
-//bind 3 "weapon 3"
-//bind 4 "weapon 4"
-//bind 5 "weapon 5"
-//bind 6 "weapon 6"
+alias primary [ weapon 0 ]
+alias secondary [ weapon 1 ]
+alias melee [ weapon 2 ]
+alias grenade [ weapon 3 ]
+
+bind 1 primary
+bind 2 secondary
+bind 3 melee
+bind 4 grenade
+
 bind R reload
-bind MOUSE2 "scoped 1; onrelease [ scoped 0 ]"
+bind MOUSE2 [ altattack ]
 
 alias delta_edit_0 [ editheight $flrceil $arg1 ]
 alias delta_edit_1 [ if $flrceil [ vdelta $arg1 ] [ vdelta (- 0 $arg1) ] ]
@@ -85,39 +89,13 @@ alias delta_edit_3 [ edittex (+ $flrceil 1) $arg1 ]
 alias delta_edit_4 [ equalize $flrceil ]
 alias delta_edit_5 [ entproperty 0 $arg1 ]  // and the others
 
-alias delta_game_0 [ if (= $arg1 1) [ wup ] [ wdw ] ]
-
-alias zfov 100
-
-alias delta_game_1 [
-  alias zfov (+ $zfov (* $arg1 (div $zfov -5)))
-  if (< $zfov 10)  [ alias zfov 10 ]
-  if (> $zfov 120) [ alias zfov 120 ]
-  fov $zfov
-]
+alias delta_game_0 [ if (= $arg1 1) [ shiftweapon 1 ] [ shiftweapon -1 ] ]
 
 if (only_menu_music) [ musicvol 1; music $menu_music ]
-
-bind p "connect 67.163.146.134" 
 
 // change
 hudgun 1
 
-bind KP_MINUS "conskip 1"
-bind KP_PLUS "conskip -1"
-
-bind 1 "newent light 16 100"
-bind 2 "newent light 13 120"
-bind 3 "newent light 10 150"
-bind 4 "newent light 8 150"
-bind 5 "newent light 6 175"
-bind 6 "newent light 5 180"
-bind 7 "newent light 4 100"
-bind 8 "newent light 3 225"
-bind 9 "newent light 2 225"
-
-bind right "vdelta 1"
-bind left "vdelta -1"
 
 
 
