--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -43,4 +43,4 @@ registersound "ctf/flagreturn"      //S_FLAGRETURN
 registersound "ctf/flagscore"       //S_FLAGSCORE
 registersound "weapon/grenade_pull" // S_GRENADEPULL
 registersound "weapon/grenade_throw" // S_GRENADETHROW
-registersound "weapon/pistol_reload" // S_RAKIMBO
+registersound "weapon/pistol_akreload" // S_RAKIMBO
