akimbo off sound..
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@307 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -18,7 +18,7 @@ registersound "misc/pickup_armour"           //S_ITEMARMOUR
 registersound "misc/tick9"           //S_ITEMPUP
 registersound "free/tick10"           //S_ITEMSPAWN
 registersound "weapon/clip_empty"      //S_NOAMMO
-registersound "free/tick11"           //S_PUPOUT 20
+registersound "misc/tick11"         //S_PUPOUT 20
 registersound "player/pain1"        //S_PAIN1
 registersound "player/pain2"        //S_PAIN2
 registersound "player/pain3"        //S_PAIN3
