Docs and licenses
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@314 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -36,12 +36,15 @@ newmenu maps
 
 genmapitems "ac_complex ac_mines ac_depot ac_desert"
 
+newmenu maps_ctf 
+
+genmapitems "ac_mines ac_depot"
+
 newmenu setup
 
 menuitem "Select Team"           "showmenu team"
 menuitem "Select Skins"           "showmenu skins"
-menuitem "Select Weapon"         "showmenu weapons"
-menuitem "Setup Crosshair"       "echo not yet.."   
+menuitem "Select Weapon"         "showmenu weapons"  
 menuitem "Set Name"              "saycommand /name"
 
 newmenu skins
@@ -88,7 +91,7 @@ newmenu gamemode
 
 menuitem "Team Deathmatch"        "mode 0;  showmenu maps"
 menuitem "Team Survivor"          "mode 4;  showmenu maps"
-menuitem "Capture the Flag"       "mode 5;  showmenu maps"
+menuitem "Capture the Flag"       "mode 5;  showmenu maps_ctf"
 menuitem "Deathmatch"        	  "mode 2;  showmenu maps"
 menuitem "Deathmatch Arena (LMS)" "mode 3;  showmenu maps"
 
@@ -169,61 +172,68 @@ menuitem "Fencedoor"            "newent mapmodel 16"
 newmenu plants
 
 menuitem "Grass1"     		"newent mapmodel 17"
-menuitem "Grass2"     		"newent mapmodel 18"
-menuitem "Plant1"     		"newent mapmodel 19"
-menuitem "Tree1"     		"newent mapmodel 20"
+menuitem "Grass1_dry"           "newent mapmodel 18"
+menuitem "Grass1_snow"          "newent mapmodel 19"
+menuitem "Grass2"     		"newent mapmodel 20"
+menuitem "Grass2_dry"           "newent mapmodel 21"
+menuitem "Grass2_snow"          "newent mapmodel 22"
+menuitem "Plant1"     		"newent mapmodel 23"
+menuitem "Plant1_dry"           "newent mapmodel 24"
+menuitem "Plant1_snow"          "newent mapmodel 25"
+menuitem "Tree"     		"newent mapmodel 26"
 
 newmenu interior
 
-menuitem "Chair" 	        "newent mapmodel 21"
-menuitem "Laptop"     		"newent mapmodel 22"
-menuitem "Picture1"      	"newent mapmodel 23"
-menuitem "Locker"     		"newent mapmodel 24"
+menuitem "Chair" 	        "newent mapmodel 27"
+menuitem "Laptop"     		"newent mapmodel 28"
+menuitem "Picture1"      	"newent mapmodel 29"
+menuitem "Locker"     		"newent mapmodel 30"
 
 newmenu lights
 
-menuitem "Strahler"    		"newent mapmodel 25"
-menuitem "Light1"    		"newent mapmodel 26"
-menuitem "Bulb"    		"newent mapmodel 27"
+menuitem "Strahler"    		"newent mapmodel 31"
+menuitem "Light1"    		"newent mapmodel 32"
+menuitem "Bulb"    		"newent mapmodel 33"
 
 newmenu industrial
 
-menuitem "Barrel"          	"newent mapmodel 28"
-menuitem "Knocked Over Barrel"  "newent mapmodel 29"
-menuitem "Electric meter"	"newent mapmodel 30"
-menuitem "Pallette"             "newent mapmodel 31"
-menuitem "Gastank"   		"newent mapmodel 32"
-menuitem "Grate (horizontal)"   "newent mapmodel 33"
-menuitem "Grate (vertical)"     "newent mapmodel 34"
-menuitem "Wrench"     		"newent mapmodel 35"
-menuitem "Screw"     		"newent mapmodel 36"
-menuitem "Hook"     		"newent mapmodel 46"
+menuitem "Barrel"          	"newent mapmodel 34"
+menuitem "Knocked Over Barrel"  "newent mapmodel 35"
+menuitem "Electric meter"	"newent mapmodel 36"
+menuitem "Pallette"             "newent mapmodel 37"
+menuitem "Gastank"   		"newent mapmodel 38"
+menuitem "Grate (horizontal)"   "newent mapmodel 39"
+menuitem "Grate (vertical)"     "newent mapmodel 40"
+menuitem "Wrench"     		"newent mapmodel 41"
+menuitem "Screw"     		"newent mapmodel 42"
+menuitem "Hook"     		"newent mapmodel 52"
 
 newmenu signs
 
-menuitem "Flammable Sign"       "newent mapmodel 37"
-menuitem "Speed Limit Sign"     "newent mapmodel 38"
-menuitem "Maintenance Sign"     "newent mapmodel 39"
-menuitem "Caution Sign"         "newent mapmodel 40"
-menuitem "Biohazard Sign"       "newent mapmodel 41"
+menuitem "Flammable Sign"       "newent mapmodel 43"
+menuitem "Speed Limit Sign"     "newent mapmodel 44"
+menuitem "Maintenance Sign"     "newent mapmodel 45"
+menuitem "Caution Sign"         "newent mapmodel 46"
+menuitem "Biohazard Sign"       "newent mapmodel 47"
 
 newmenu other
-menuitem "Cigarette"     	"newent mapmodel 42"
-menuitem "Can" 			"newent mapmodel 43"
-menuitem "Fallen Can"     	"newent mapmodel 44"
-menuitem "Broken Wood"     	"newent mapmodel 45"
-menuitem "Coffee"               "newent mapmodel 47"
-menuitem "Flyer"                "newent mapmodel 48"
-menuitem "Poster"               "newent mapmodel 49"
+menuitem "Cigarette"     	"newent mapmodel 48"
+menuitem "Can" 			"newent mapmodel 49"
+menuitem "Fallen Can"     	"newent mapmodel 50"
+menuitem "Broken Wood"     	"newent mapmodel 51"
+menuitem "Coffee"               "newent mapmodel 53"
+menuitem "Flyer"                "newent mapmodel 54"
+menuitem "Poster"               "newent mapmodel 55"
 
 
 newmenu entities
 
-menuitem rvsf_spawn               "echo unknown command..."
-menuitem cla_spawn               "echo unknown command..."
-menuitem rvsf_flag                "echo unknown command..."
-menuitem cla_flag                "echo unknown command..."
-menuitem ladder                 "echo not yet..."
+menuitem spawn_RVSF              "newent playerstart 1"
+menuitem spawn_CLA               "newent playerstart 0"
+menuitem spawn_ffa               "newent playerstart 100"
+menuitem flag_RVSF               "newent ctf-flag 1"
+menuitem flag_CLA                "newent ctf-flag 0"
+menuitem ladder                  "newent ladder"
 
 newmenu pickups
 
@@ -231,7 +241,7 @@ menuitem "Health"                "newent health"
 menuitem "Pistol Ammo"           "newent clips"
 menuitem "Box of Ammo"           "newent ammobox"
 menuitem "Kevlar Vest"           "newent armour"
-menuitem "Akimbo"                "echo not yet..."
+menuitem "Akimbo"                "newent akimbo"
 
 newmenu arches
 
