--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -29,42 +29,48 @@ mapmodel 1 8 0 0 "fencepost"       //14
 mapmodel 1 8 0 0 "fencegate_open"  //15
 mapmodel 1 8 0 0 "fencegate_closed"//16
 mapmodel 0 0 0 0 "grass01"         //17
-mapmodel 0 0 0 0 "grass02"         //18
-mapmodel 0 0 0 0 "plant01"         //19
-mapmodel 1 7 0 0 "tree01"          //20
-mapmodel 1 2 0 0 "chair1"          //21
-mapmodel 0 0 0 0 "laptop1"         //22
-mapmodel 0 0 0 0 "picture1"        //23 If you wish to put a custom pic in the frame
+mapmodel 0 0 0 0 "grass01_d"       //18
+mapmodel 0 0 0 0 "grass01_s"       //19
+mapmodel 0 0 0 0 "grass02"         //20
+mapmodel 0 0 0 0 "grass02_d"       //21
+mapmodel 0 0 0 0 "grass02_s"       //22
+mapmodel 0 0 0 0 "plant01"         //23
+mapmodel 0 0 0 0 "plant01_d"       //24
+mapmodel 0 0 0 0 "plant01_s"       //25
+mapmodel 1 7 0 0 "tree01"          //26
+mapmodel 1 2 0 0 "chair1"          //27
+mapmodel 0 0 0 0 "laptop1"         //28
+mapmodel 0 0 0 0 "picture1"        //29 If you wish to put a custom pic in the frame
 //                                      use skin_blanco.jpg
 //                                      please make a new folder,
 //                                      preferably called picture1_yourmapname. 
-mapmodel 1 6 0 0 "locker"          //24
-mapmodel 0 0 0 0 "strahler"        //25
-mapmodel 0 0 0 0 "light01"         //26 
-mapmodel 0 0 0 0 "bulb"            //27
-mapmodel 1  3 0 0 "barrel"         //28
-mapmodel 1  2 0 0 "barrel2"        //29
-mapmodel 0  0 0 0 "elektro"        //30  
-mapmodel 3  1 0 0 "europalette"    //31
-mapmodel 0 0 0 0 "gastank"         //32 use nothing model to clip
-mapmodel 2 1 0 0 "gutter_h"        //33
-mapmodel 1 2 0 0 "gutter_v"        //34
-mapmodel 0 0 0 0 "wrench"          //35
-mapmodel 0 0 0 0 "screw"           //36
-mapmodel 0  0 0 0 "signs/flammable"//37
-mapmodel 0  0 0 0 "signs/speed"    //38
-mapmodel 0  0 0 0 "signs/maint"    //39
-mapmodel 0  0 0 0 "signs/caution"  //40
-mapmodel 0 0 0 0 "signs/biohazard" //41 
-mapmodel 0 0 0 0 "fag"             //42
-mapmodel 0 0 0 0 "can"             //43
-mapmodel 0 0 0 0 "can2"            //44
-mapmodel 0 0 0 0 "wood01"          //45
-mapmodel 0 0 0 0 "hook"            //46
-mapmodel 0 0 0 0 "coffeemug"       //47
-mapmodel 0 0 0 0 "flyer"           //48
-mapmodel 0 0 0 0 "poster"          //49 mind z-buffer issues on 16bit!
-
+mapmodel 1 6 0 0 "locker"          //30
+mapmodel 0 0 0 0 "strahler"        //31
+mapmodel 0 0 0 0 "light01"         //32 
+mapmodel 0 0 0 0 "bulb"            //33
+mapmodel 1  3 0 0 "barrel"         //34
+mapmodel 1  2 0 0 "barrel2"        //35
+mapmodel 0  0 0 0 "elektro"        //36  
+mapmodel 3  1 0 0 "europalette"    //37
+mapmodel 0 0 0 0 "gastank"         //38 use nothing model to clip
+mapmodel 2 1 0 0 "gutter_h"        //39
+mapmodel 1 2 0 0 "gutter_v"        //40
+mapmodel 0 0 0 0 "wrench"          //41
+mapmodel 0 0 0 0 "screw"           //42
+mapmodel 0  0 0 0 "signs/flammable"//43
+mapmodel 0  0 0 0 "signs/speed"    //44
+mapmodel 0  0 0 0 "signs/maint"    //45
+mapmodel 0  0 0 0 "signs/caution"  //46
+mapmodel 0 0 0 0 "signs/biohazard" //47 
+mapmodel 0 0 0 0 "fag"             //48
+mapmodel 0 0 0 0 "can"             //49
+mapmodel 0 0 0 0 "can2"            //50
+mapmodel 0 0 0 0 "wood01"          //51
+mapmodel 0 0 0 0 "hook"            //52
+mapmodel 0 0 0 0 "coffeemug"       //53
+mapmodel 0 0 0 0 "flyer"           //54
+mapmodel 0 0 0 0 "poster"          //55 mind z-buffer issues on 16bit!
+mapmodel 0 0 0 0 "aard"            //56
 
 // skybox for this map - check /packages/skymaps/
 
