--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -5,6 +5,7 @@ bind ESCAPE "showmenu main"    // it all starts here
 newmenu main
 
 menuitem "Multiplayer"  	        "showmenu multiplayer"
+menuitem "Botmatch"			"showmenu botmatch"
 menuitem "Team/Player Setup"		"showmenu setup"
 menuitem "Load Map"			"showmenu maps"
 menuitem "Options"                      "showmenu options"
@@ -13,7 +14,7 @@ menuitem "About/Credits/Help"           "showmenu about"
 menuitem "quit"				"quit"
 
 // menubg	 "textures/blah..."
-// menumdl path frame range rotation-speed{0-100} scale{0-100}
+// menumdl path frame range rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
 
 alias genmapitems [
@@ -89,11 +90,24 @@ menuitem "Disconnect"             "disconnect"
 newmenu gamemode
 
 
-menuitem "Team Deathmatch"        "mode 0;  showmenu maps"
-menuitem "Team Survivor"          "mode 4;  showmenu maps"
-menuitem "Capture the Flag"       "mode 5;  showmenu maps_ctf"
-menuitem "Deathmatch"        	  "mode 2;  showmenu maps"
-menuitem "Deathmatch Arena (LMS)" "mode 3;  showmenu maps"
+menuitem "Team Deathmatch"        "mode 0; showmenu maps"
+menuitem "Team Survivor"          "mode 4; showmenu maps"
+menuitem "Capture the Flag"       "mode 5; showmenu maps_ctf"
+menuitem "Deathmatch"        	  "mode 2; showmenu maps"
+menuitem "Deathmatch Arena (LMS)" "mode 3; showmenu maps"
+
+
+newmenu botmatch
+
+menuitem "You vs. the World (TM)" "mode 0; showmenu botskill"
+
+
+newmenu botskill
+
+menuitem "Easy"						"; showmenu maps"
+menuitem "Medium"					"; showmenu maps"
+menuitem "Pure Pwnage"				"; showmenu maps"
+
 
 newmenu editing
 
@@ -103,6 +117,7 @@ menuitem "Pickups"                              "showmenu pickups"
 menuitem "Arches and slopes.."                  "showmenu arches"
 menuitem "Map operations.."                     "showmenu mapop"
 menuitem "help..."                              "showmenu editkeys"
+
 
 newmenu editkeys
 
@@ -118,6 +133,7 @@ menuitem "toggle show geometric mipmaps (key f5)"           "showmip"
 menuitem "toggle occlusion culling (key f6)                 "toggleocull"
 menuitem "more..."                                          "showmenu more"
 
+
 newmenu more
 
 menuitem "insert/home/pgup/keyp7 browse through floor/wall/ceiling/" ""
@@ -131,6 +147,7 @@ menuitem ", and . equalize the floor/ceiling ceiling level"          ""
 menuitem "H makes the floor a heightfield, I the ceiling"            ""
 menuitem "8/9 change the offset of a vertex in a heightfield"        ""
 
+
 newmenu mapmodels
 
 menuitem "misc"       "showmenu misc"
@@ -143,10 +160,12 @@ menuitem "industrial" "showmenu industrial"
 menuitem "signs"      "showmenu signs"
 menuitem "other"      "showmenu other"
 
+
 newmenu misc
 
 menuitem "Nothing (clip)"       "newent mapmodel 0"
 menuitem "Bridge(8x8)"        	"newent mapmodel 1"
+
 
 newmenu ladders
 
@@ -156,8 +175,8 @@ menuitem "Ladder(10)"           "newent mapmodel 4"
 menuitem "Ladder(11)"            "newent mapmodel 5"
 menuitem "Ladder(15)"            "newent mapmodel 6" 
 
-newmenu street
 
+newmenu street
 
 menuitem "Streetlight"    	"newent mapmodel 7"
 menuitem "Bench"        	"newent mapmodel 9"
@@ -342,15 +361,17 @@ menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
 
 newmenu about
 
-menuitem "Actioncube beta v.1.0" ""
+menuitem "ActionCube v.0.9" ""
+menuitem ""
 menuitem "                     ...help" "showmenu help"
 menuitem "                     ...credits" "showmenu credits"
-menuitem "by Rabid Viper Productions" "showmenu credits"
-menuitem "actioncube.sprintf.org" "echo sorry no built-in web browser yet :)"
+menuitem ""
+menuitem "by 'Rabid Viper Productions'" "showmenu credits"
+menuitem "http://actioncube.sprintf.org" "echo sorry no built-in web browser yet :)"
 menuitem "a cube mod/tc based on the" ""
 menuitem ""
 menuitem "Cube game/engine" " "
-menuitem "by Wouter van Oortmerssen" " "
+menuitem "by Wouter 'Aardappel' van Oortmerssen" "echo ..yes, the uber-coder"
 menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)"
 
 
