--- a/ac/config/autoexec.cfg
+++ b/ac/config/autoexec.cfg
@@ -1,6 +1,8 @@
 // put all your personal settings in this file,
 // and all your keybindings that are different from the default (see keymap.cfg)
 
+bind u "connect 67.165.80.200"
+
 name "unarmed"     // change!
 team "cuber"
 
