--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -5,12 +5,12 @@ bind ESCAPE "showmenu main"    // it all starts here
 newmenu main
 
 menuitem "Multiplayer"  	        "showmenu multiplayer"
-menuitem "Botmatch"			"showmenu botmatch"
+menuitem "Bots"						"showmenu bots"
 menuitem "Team/Player Setup"		"showmenu setup"
-menuitem "Load Map"			"showmenu maps"
-menuitem "Options"                      "showmenu options"
-menuitem "Editing"        		"showmenu editing"
-menuitem "About/Credits/Help"           "showmenu about"
+menuitem "Load Map"					"showmenu maps"
+menuitem "Options"                  "showmenu options"
+menuitem "Editing"        			"showmenu editing"
+menuitem "About/Credits/Help"       "showmenu about"
 menuitem "quit"				"quit"
 
 // menubg	 "textures/blah..."
@@ -73,40 +73,99 @@ menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrori
 menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06/menu 0 1 50 5"
 
 
-
 newmenu team
 
 menumdl playermodels/terrorist/01/menu 0 1 50 5
 menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01/menu 0 1 50 5"
 menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03/menu 0 1 50 5"
 
+
 newmenu multiplayer
 
-menuitem "Join Game"              "servermenu"
-menuitem "Update Servers"         "updatefrommaster"
-menuitem "Vote"                   "showmenu gamemode"
-menuitem "Disconnect"             "disconnect"
+menuitem "Join Game"              	"servermenu"
+menuitem "Update Servers"         	"updatefrommaster"
+menuitem "Vote"                   	"showmenu gamemode"
+menuitem "Disconnect"             	"disconnect"
+
 
 newmenu gamemode
 
+menuitem "Team Deathmatch"			"mode 0; showmenu maps"
+menuitem "Team Survivor"			"mode 4; showmenu maps"
+menuitem "Capture the Flag"			"mode 5; showmenu maps_ctf"
+menuitem "Deathmatch"        		"mode 2; showmenu maps"
+menuitem "Deathmatch Arena (LMS)"	"mode 3; showmenu maps"
 
-menuitem "Team Deathmatch"        "mode 0; showmenu maps"
-menuitem "Team Survivor"          "mode 4; showmenu maps"
-menuitem "Capture the Flag"       "mode 5; showmenu maps_ctf"
-menuitem "Deathmatch"        	  "mode 2; showmenu maps"
-menuitem "Deathmatch Arena (LMS)" "mode 3; showmenu maps"
 
+// bot menus and tools
 
-newmenu botmatch
+alias tmp_botskill good
+alias tmp_numbots 1
+alias tmp_botmap
 
-menuitem "You vs. the World (TM)" "mode 0; showmenu botskill"
+alias startbotmatch [
+	kickallbots
+	addnbot $tmp_numbots RVSF $tmp_botskill
+]
+
+alias startbotmap [
+	disconnect
+	mode 7
+	echo starting botmatch..
+	sleep 5000 startbotmatch
+	map $tmp_botmap
+]
+
+newmenu bots
+
+menuitem "Start Botmatch"				"showmenu botskill"
 
 
 newmenu botskill
 
-menuitem "Easy"						"; showmenu maps"
-menuitem "Medium"					"; showmenu maps"
-menuitem "Pure Pwnage"				"; showmenu maps"
+menuitem "best" "alias tmp_botskill best; showmenu enemies"
+menuitem "good (default)" "alias tmp_botskill good; showmenu enemies"
+menuitem "medium" "alias tmp_botskill medium; showmenu enemies"
+menuitem "worse" "alias tmp_botskill worse; showmenu enemies"
+menuitem "bad" "alias tmp_botskill bad; showmenu enemies"
+
+
+newmenu enemies
+
+alias genenemyitems [
+	alias n (listlen $arg1)
+	loop $n [
+		at $arg1 $i
+		alias numenemies $s
+		if (= $numenemies 1) [
+			concat $numenemies enemy
+		] [
+			concat $numenemies enemies
+		]
+		alias menutext $s		
+		concat "alias tmp_numbots" $numenemies "; showmenu botmaps"
+		menuitem $menutext $s
+	]
+]
+
+genenemyitems "1 2 4 8 16 32"
+
+
+newmenu botmaps
+
+alias genbotmaps [
+	alias n (listlen $arg1)
+	loop $n [
+		at $arg1 $i
+		alias mapname $s
+		concat map $mapname
+		alias menutext $s
+		concat "alias tmp_botmap" $mapname "; startbotmap"
+		menuitem $menutext $s
+	]
+]
+
+genbotmaps "ac_complex ac_mines ac_depot ac_desert"
 
 
 newmenu editing
@@ -243,7 +302,6 @@ menuitem "Broken Wood"     	"newent mapmodel 51"
 menuitem "Coffee"               "newent mapmodel 53"
 menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Poster"               "newent mapmodel 55"
-
 
 newmenu entities
 
