--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -16,7 +16,7 @@ registersound "misc/pickup_health"           //S_ITEMHEALTH
 registersound "misc/pickup_armour"           //S_ITEMARMOUR
 registersound "misc/tick9"           //S_ITEMPUP
 registersound "weapon/clip_empty"      //S_NOAMMO
-registersound "misc/tick11"         //S_PUPOUT 20
+registersound "misc/tick11"         //S_PUPOUT
 registersound "player/pain1"        //S_PAIN1
 registersound "player/pain2"        //S_PAIN2
 registersound "player/pain3"        //S_PAIN3
@@ -38,3 +38,5 @@ registersound "ctf/flagscore"       //S_FLAGSCORE
 registersound "weapon/grenade_pull" // S_GRENADEPULL
 registersound "weapon/grenade_throw" // S_GRENADETHROW
 registersound "weapon/pistol_akreload" // S_RAKIMBO
+registersound "misc/change_gun"		// S_GUNCHANGE
+
