--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -11,7 +11,7 @@ menuitem "Load Map"					"showmenu maps"
 menuitem "Options"                  "showmenu options"
 menuitem "Editing"        			"showmenu editing"
 menuitem "About/Credits/Help"       "showmenu about"
-menuitem "quit"				"quit"
+menuitem "Quit"						"quit"
 
 // menubg	 "textures/blah..."
 // menumdl path frame range rotation-speed{0..100} scale{0..100}
@@ -55,29 +55,29 @@ menuitem "RVSF Skins"             "showmenu rvsf"
 
 newmenu "cla"
 
-menumdl playermodels/terrorist/01/menu 0 1 50 5
-menuitem "Comandante"		"skin 0" "chmenumdl cla playermodels/terrorist/01/menu 0 1 50 5"
-menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02/menu 0 1 50 5"
-menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03/menu 0 1 50 5"
-menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04/menu 0 1 50 5"
+menumdl playermodels/terrorist/01 0 197 50 5
+menuitem "Comandante"		"skin 0" "chmenumdl cla playermodels/terrorist/01 0 197 50 5"
+menuitem "Psycho"               "skin 1" "chmenumdl cla playermodels/terrorist/02 0 197 50 5"
+menuitem "Bomber"               "skin 2" "chmenumdl cla playermodels/terrorist/03 0 197 50 5"
+menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/04 0 197 50 5"
 
 
 newmenu "rvsf"
 
-menumdl playermodels/counterterrorist/01/menu 0 1 50 5
-menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01/menu 0 1 50 5"
-menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02/menu 0 1 50 5"
-menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03/menu 0 1 50 5"
-menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04/menu 0 1 50 5"
-menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05/menu 0 1 50 5"
-menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06/menu 0 1 50 5"
+menumdl playermodels/counterterrorist/01 0 197 50 5
+menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01 0 197 50 5"
+menuitem "Tango"            "skin 1" "chmenumdl rvsf playermodels/counterterrorist/02 0 197 50 5"
+menuitem "Cobra"            "skin 2" "chmenumdl rvsf playermodels/counterterrorist/03 0 197 50 5"
+menuitem "Viper"            "skin 3" "chmenumdl rvsf playermodels/counterterrorist/04 0 197 50 5"
+menuitem "Swat"             "skin 4" "chmenumdl rvsf playermodels/counterterrorist/05 0 197 50 5"
+menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrorist/06 0 197 50 5"
 
 
 newmenu team
 
-menumdl playermodels/terrorist/01/menu 0 1 50 5
-menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01/menu 0 1 50 5"
-menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03/menu 0 1 50 5"
+menumdl playermodels/terrorist/01 0 197 50 5
+menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01 0 197 50 5"
+menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/counterterrorist/03 0 197 50 5"
 
 
 newmenu multiplayer
