sound and menu stuff
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@324 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -13,7 +13,7 @@ menuitem "Editing"        			"showmenu editing"
 menuitem "About/Credits/Help"       "showmenu about"
 menuitem "Quit"						"quit"
 
-// menubg	 "textures/blah..."
+menubg	 "textures/makke/menu.jpg"
 // menumdl path frame range rotation-speed{0..100} scale{0..100}
 // chmenumdl menuname newpath
 
@@ -34,14 +34,17 @@ alias genmapitems [
 ]
 
 newmenu maps
+menubg	 "textures/makke/menu.jpg"
 
 genmapitems "ac_complex ac_mines ac_depot ac_desert"
 
 newmenu maps_ctf 
+menubg	 "textures/makke/menu.jpg"
 
 genmapitems "ac_mines ac_depot"
 
 newmenu setup
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Select Team"           "showmenu team"
 menuitem "Select Skins"           "showmenu skins"
@@ -49,11 +52,13 @@ menuitem "Select Weapon"         "showmenu weapons"
 menuitem "Set Name"              "saycommand /name"
 
 newmenu skins
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "CLA Skins"              "showmenu cla"
 menuitem "RVSF Skins"             "showmenu rvsf"
 
 newmenu "cla"
+menubg	 "textures/makke/menu.jpg"
 
 menumdl playermodels/terrorist/01 0 197 50 5
 menuitem "Comandante"		"skin 0" "chmenumdl cla playermodels/terrorist/01 0 197 50 5"
@@ -63,6 +68,7 @@ menuitem "Ripper"               "skin 3" "chmenumdl cla playermodels/terrorist/0
 
 
 newmenu "rvsf"
+menubg	 "textures/makke/menu.jpg"
 
 menumdl playermodels/counterterrorist/01 0 197 50 5
 menuitem "Alpha"            "skin 0" "chmenumdl rvsf playermodels/counterterrorist/01 0 197 50 5"
@@ -74,6 +80,7 @@ menuitem "Police"           "skin 5" "chmenumdl rvsf playermodels/counterterrori
 
 
 newmenu team
+menubg	 "textures/makke/menu.jpg"
 
 menumdl playermodels/terrorist/01 0 197 50 5
 menuitem "Cuban Liberations Army"			"team CLA" "chmenumdl team playermodels/terrorist/01 0 197 50 5"
@@ -81,6 +88,7 @@ menuitem "Rabid Viper Special Forces"		"team RVSF" "chmenumdl team playermodels/
 
 
 newmenu multiplayer
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Join Game"              	"servermenu"
 menuitem "Update Servers"         	"updatefrommaster"
@@ -89,6 +97,7 @@ menuitem "Disconnect"             	"disconnect"
 
 
 newmenu gamemode
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Team Deathmatch"			"mode 0; showmenu maps"
 menuitem "Team Survivor"			"mode 4; showmenu maps"
@@ -117,11 +126,13 @@ alias startbotmap [
 ]
 
 newmenu bots
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Start Botmatch"				"showmenu botskill"
 
 
 newmenu botskill
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "best" "alias tmp_botskill best; showmenu enemies"
 menuitem "good (default)" "alias tmp_botskill good; showmenu enemies"
@@ -131,6 +142,7 @@ menuitem "bad" "alias tmp_botskill bad; showmenu enemies"
 
 
 newmenu enemies
+menubg	 "textures/makke/menu.jpg"
 
 alias genenemyitems [
 	alias n (listlen $arg1)
@@ -152,6 +164,7 @@ genenemyitems "1 2 4 8 16 32"
 
 
 newmenu botmaps
+menubg	 "textures/makke/menu.jpg"
 
 alias genbotmaps [
 	alias n (listlen $arg1)
@@ -169,6 +182,7 @@ genbotmaps "ac_complex ac_mines ac_depot ac_desert"
 
 
 newmenu editing
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Mapmodels..."				"showmenu mapmodels"
 menuitem "Entities"			        "showmenu entities"
@@ -179,6 +193,7 @@ menuitem "help..."                              "showmenu editkeys"
 
 
 newmenu editkeys
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "toggle edit mode (key E)"                         "edittoggle"
 menuitem "undo last edit action (key U)"                    "undo"
@@ -194,6 +209,7 @@ menuitem "more..."                                          "showmenu more"
 
 
 newmenu more
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "insert/home/pgup/keyp7 browse through floor/wall/ceiling/" ""
 menuitem "      upper textures on your current selection,"           ""
@@ -208,6 +224,7 @@ menuitem "8/9 change the offset of a vertex in a heightfield"        ""
 
 
 newmenu mapmodels
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "misc"       "showmenu misc"
 menuitem "ladders"    "showmenu ladders" 
@@ -221,12 +238,14 @@ menuitem "other"      "showmenu other"
 
 
 newmenu misc
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Nothing (clip)"       "newent mapmodel 0"
 menuitem "Bridge(8x8)"        	"newent mapmodel 1"
 
 
 newmenu ladders
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Ladder(7)"             "newent mapmodel 2"             
 menuitem "Ladder(8)"             "newent mapmodel 3"
@@ -236,6 +255,7 @@ menuitem "Ladder(15)"            "newent mapmodel 6"
 
 
 newmenu street
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Streetlight"    	"newent mapmodel 7"
 menuitem "Bench"        	"newent mapmodel 9"
@@ -248,6 +268,7 @@ menuitem "Fencegate"            "newent mapmodel 15"
 menuitem "Fencedoor"            "newent mapmodel 16"
 
 newmenu plants
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Grass1"     		"newent mapmodel 17"
 menuitem "Grass1_dry"           "newent mapmodel 18"
@@ -261,6 +282,7 @@ menuitem "Plant1_snow"          "newent mapmodel 25"
 menuitem "Tree"     		"newent mapmodel 26"
 
 newmenu interior
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Chair" 	        "newent mapmodel 27"
 menuitem "Laptop"     		"newent mapmodel 28"
@@ -268,12 +290,14 @@ menuitem "Picture1"      	"newent mapmodel 29"
 menuitem "Locker"     		"newent mapmodel 30"
 
 newmenu lights
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Strahler"    		"newent mapmodel 31"
 menuitem "Light1"    		"newent mapmodel 32"
 menuitem "Bulb"    		"newent mapmodel 33"
 
 newmenu industrial
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Barrel"          	"newent mapmodel 34"
 menuitem "Knocked Over Barrel"  "newent mapmodel 35"
@@ -287,6 +311,7 @@ menuitem "Screw"     		"newent mapmodel 42"
 menuitem "Hook"     		"newent mapmodel 52"
 
 newmenu signs
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Flammable Sign"       "newent mapmodel 43"
 menuitem "Speed Limit Sign"     "newent mapmodel 44"
@@ -295,6 +320,8 @@ menuitem "Caution Sign"         "newent mapmodel 46"
 menuitem "Biohazard Sign"       "newent mapmodel 47"
 
 newmenu other
+menubg	 "textures/makke/menu.jpg"
+
 menuitem "Cigarette"     	"newent mapmodel 48"
 menuitem "Can" 			"newent mapmodel 49"
 menuitem "Fallen Can"     	"newent mapmodel 50"
@@ -304,6 +331,7 @@ menuitem "Flyer"                "newent mapmodel 54"
 menuitem "Poster"               "newent mapmodel 55"
 
 newmenu entities
+menubg	 "textures/makke/menu.jpg"
 
 menuitem spawn_RVSF              "newent playerstart 1"
 menuitem spawn_CLA               "newent playerstart 0"
@@ -313,6 +341,7 @@ menuitem flag_CLA                "newent ctf-flag 0"
 menuitem ladder                  "newent ladder"
 
 newmenu pickups
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Health"                "newent health"
 menuitem "Pistol Ammo"           "newent clips"
@@ -321,6 +350,7 @@ menuitem "Kevlar Vest"           "newent armour"
 menuitem "Akimbo"                "newent akimbo"
 
 newmenu arches
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "normal arch"                        "heightfield 2; arch 0"
 menuitem "arch with sideways curve (delta 1)" "heightfield 2; arch 1"
@@ -340,6 +370,7 @@ menuitem "[ arches make ceiling heighfield, slopes floor ]"
 
 
 newmenu mapop
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Newmap 128x128 cubes (recommended)" "newmap 7"
 menuitem "Newmap 256x256 cubes"               "newmap 8"
@@ -349,12 +380,14 @@ menuitem "Set map title/author"               "saycommand /mapmsg"
 bind B "showmenu weapons"
 
 //newmenu items 
+//menubg	 "textures/makke/menu.jpg"
 
 //menuitem "Primary Weapon"	"showmenu primary"
 //menuitem "Secondary Weapon"	"showmenu secondary"
 //menuitem "Equipment"	        "showmenu equipment"
 
 newmenu "weapons"
+menubg	 "textures/makke/menu.jpg"
 
 menumdl weapons/assault/menu 0 1 75 12
 menuitem "Mtp 57 Assault Rifle"			"item 5;echo MK-77 Assault Rifle chosen" "chmenumdl weapons weapons/assault/menu 0 1 75 12"
@@ -372,6 +405,7 @@ menuitem "V-19 Combat Shotgun"			"item 2;echo V-19 Combat Shotgun chosen" "chmen
 //menuitem "SN-Tech Kelvar Vest"			"echo SN-Tech Kelvar Vest chosen" "chmenumdl equipment pickups/kevlar 0 1 40 20"
 
 newmenu options
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "tweak minlod.. (higher = less popup, possibly lower fps)" "showmenu minlod"
 menuitem "tweak fpsrange.. (higher = possibly more popup)"          "showmenu fpsrange"
@@ -380,6 +414,7 @@ menuitem "turn dynamic light/shadows off"                           "dynlight 0"
 menuitem "tweak gamma.."                                            "showmenu gamma"
 
 newmenu gamma
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "gamma 50"
 menuitem "gamma 60"
@@ -394,6 +429,7 @@ menuitem "gamma 140"
 menuitem "gamma 150"
 
 newmenu minlod
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "minimum (25)"        "minlod 25"
 menuitem "decent (60)"         "minlod 60"
@@ -401,6 +437,7 @@ menuitem "good (100)"          "minlod 100"
 menuitem "fps be damned (250)" "minlod 250"
 
 newmenu fpsrange
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "my 486 0wnz y00 (8-10)"        "fpsrange 8 10"
 menuitem "slow machine (20-25)"          "fpsrange 20 25"
@@ -409,6 +446,7 @@ menuitem "fps whore (60-60)"             "fpsrange 60 60"
 menuitem "I don't understand LOD (100+)" "fpsrange 100 1000"
 
 newmenu watersubdiv
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "subdivision 1  (insane polygon wastage)"  "watersubdiv 1"
 menuitem "subdivision 2  (high quality)"            "watersubdiv 2"
@@ -418,6 +456,7 @@ menuitem "subdivision 16 (my 486 can do water too)" "watersubdiv 16"
 
 
 newmenu about
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "ActionCube v.0.9" ""
 menuitem ""
@@ -435,6 +474,7 @@ menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)
 
 
 newmenu help
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "r                        - reload Gun" ""
 menuitem "right mouse button     - use scope" ""
@@ -445,6 +485,7 @@ menuitem "" ""
 menuitem "-for further information read readme.html-"
 
 newmenu credits
+menubg	 "textures/makke/menu.jpg"
 
 menuitem "Arghvark    Project Leader" ""
 menuitem "              Concept, Coding" ""
