--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -38,5 +38,7 @@ registersound "ctf/flagscore"       //S_FLAGSCORE
 registersound "weapon/grenade_pull" // S_GRENADEPULL
 registersound "weapon/grenade_throw" // S_GRENADETHROW
 registersound "weapon/pistol_akreload" // S_RAKIMBO
+registersound "misc/change_gun"
 registersound "misc/change_gun"		// S_GUNCHANGE
+
 
