--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -40,5 +40,5 @@ registersound "weapon/grenade_throw" // S_GRENADETHROW
 registersound "weapon/pistol_akreload" // S_RAKIMBO
 registersound "misc/change_gun"
 registersound "misc/change_gun"		// S_GUNCHANGE
-
+registersound "player/gib"			// S_GIB
 
