--- a/ac/packages/maps/ac_desert.cfg
+++ b/ac/packages/maps/ac_desert.cfg
@@ -328,7 +328,7 @@ texture 0 "./makke/lampe_tile_a.jpg"
 texture 0 "./makke/lampe_tile2.jpg"
 texture 0 "./makke/lampe_tile2_a.jpg"
 texture 0 "./kurt/klite1.jpg"
-texture 0 "./kurt/klite2.jpg"
+texture 0 "./makke/panel.jpg"
 texture 0 "./makke/stairtrim.jpg"
 texture 0 "./makke/metalstair1.jpg"
 texture 0 "./makke/metalstair2.jpg"
